SPCTR-2708 - Fix: Container - Video Background Applies Container Styling to Container Inner Wrap (#3044)
* Resolved Padding issues on front-end

* Resolved front-end issue

* Resolved merge conflict

* Update README.md


* Resolved merge conflict

* Updated readme

---------

--- a/src/blocks/container/style.scss
+++ b/src/blocks/container/style.scss
@@ -140,3 +140,9 @@ body .ast-container .wp-block-uagb-container > .uagb-container-inner-blocks-wrap
 		margin-right: calc(50% - 50vw);
 	}
 }
+//Heading block compatibility
+@media only screen and (max-width: 767px) {
+	.wp-block-uagb-container .wp-block-uagb-advanced-heading {
+		max-width: fit-content;
+	}
+}
